# che

./: .cccp.yml  .che-dev.yaml  .coveralls.yml  .devfile  .devfile.yaml  .docker-make.yml  .dockerignore  .gitattributes  .gitignore  .repositories-update-contributing.sh  .repositories.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZING.md  Chefile  DO_NOT_MERGE_THIS  Dockerfile  Dockerfile.centos  Jenkinsfile  LICENSE  README.md  RELEASE.md  VERSION  Vagrantfile  \  all.json  appveyor.yml  build.include  ca.crt  che.bat  che.sh  check_properties_description.sh  cli.sh  debug.sh  devfile.yaml  make-release.sh  package-lock.json  pom.xml  (+4 more)
.che/: che-editor.yaml
.ci/: cico_build.sh  cico_build_nightly.sh  cico_build_pullrequest.sh  cico_build_release.sh  cico_build_release_candidate.sh  cico_common.sh  set_tag_version_images.sh  set_tag_version_images_linux.sh  set_tag_version_images_macos.sh
.ci/common-qe/: README.md  che-cert-generation.sh  che-util.sh  cico-devfile-pr-test.sh  common-qe-configuration.conf  common-util.sh  configuration.json  downloader.sh  installation-util.sh  test.sh
.dependabot/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: a_question.md  a_question.yaml  bug_report.md  bug_report.yml  enhancement.md  enhancement.yaml  release.md  task.md  task.yaml
.github/workflows/: build-pr-check.yml  clojure.yml  contributing-repositories-check.yml  happy-path-tests.yml  maven-build-pr-check.yml  need-triage-label.yaml  next-build.yml  nightly-build.yml  pr-check.yml  release-changelog.yml  release.yml  sonar.yaml  stale.yml  typescript-publish.yml
.husky/: pre-commit
.oci/: devworkspace-happy-path-test.sh
agent/: pom.xml
agent/che-core-api-git/: pom.xml
agent/che-core-api-project/: pom.xml
agent/che-core-api-vfs/: pom.xml
agent/che-core-git-impl-native/: pom.xml
agent/che-core-vfs-impl/: pom.xml
agents/: pom.xml
agents/bootstrapper/: pom.xml
agents/che-core-api-agent/: pom.xml
agents/che-core-api-agent-shared/: pom.xml
agents/exec/: .gitignore  README.md  pom.xml
agents/exec-agent/: README.md  pom.xml
agents/git/: pom.xml
agents/git-credentials/: pom.xml
agents/go-agents/: .gitignore  Gopkg.toml  README.md  pom.xml
agents/ls-camel/: pom.xml
agents/ls-clang/: pom.xml
agents/ls-csharp/: pom.xml
agents/ls-golang/: pom.xml
agents/ls-java/: pom.xml
agents/ls-json/: pom.xml
agents/ls-php/: pom.xml
agents/ls-php-agent/: pom.xml
archetypes/: README.md  pom.xml
assembly/: .gitignore  CONTRIBUTING.md  Dockerfile  NUMBERING.md  pom.xml
assembly-ide/: pom.xml
assembly-ide-war/: pom.xml
assembly-java-codeassistant/: pom.xml
assembly-machine-server/: pom.xml
assembly-machine-war/: pom.xml
assembly-main/: pom.xml
assembly-multiuser/: Readme-multiuser.md  pom.xml
assembly-platform-api/: pom.xml
assembly-sdk/: pom.xml
assembly-sdk-war/: pom.xml
assembly-war/: pom.xml
assembly2/: pom.xml
bom/: pom.xml
che-admin-war/: pom.xml
che-types/: README.md  index.d.ts  package.json
chromium-integration/devs_cefclients/linux64/source/cefclient/: CMakeLists.txt  DeveloperStudioProcess.cpp  DeveloperStudioProcess.h  Messages.cpp  Messages.h  SystemUtils.cpp  SystemUtils.h  binding_test.cpp  binding_test.h  bytes_write_handler.cpp  bytes_write_handler.h  cefclient.cpp  cefclient.h  cefclient_gtk.cpp  cefclient_osr_widget_gtk.cpp  cefclient_osr_widget_gtk.h  client_app.cpp  client_app.h  client_app_delegates.cpp  client_handler.cpp  client_handler.h  client_handler_gtk.cpp  client_renderer.cpp  client_switches.cpp  client_switches.h  dialog_test.cpp  dialog_test.h  dragdrop_events.h  osrenderer.cpp  osrenderer.h  performance_test.cpp  performance_test.h  performance_test_setup.h  performance_test_tests.cpp  print_handler_gtk.cpp  print_handler_gtk.h  resource_util.h  resource_util_linux.cpp  resource_util_posix.cpp  scheme_test.cpp  (+4 more)
chromium-integration/devs_cefclients/linux64/source/cefclient/res/: dialogs.html  other_tests.html  xmlhttprequest.html
core/: .travis.yml  README.md  pom.xml
core/ide/: pom.xml
cypress-tests/: README.md  cypress.json  package-lock.json  package.json  tsconfig.json
dashboard/: .devfile  .dockerignore  .eslintrc  .gitignore  .jshintrc  Dockerfile  README.md  bower.json  devfile.yaml  gulpfile.js  index.d.ts  karma.conf.js  package-lock.json  package.json  pom.xml  protractor.conf.js  tsconfig.json  tsd.json  tslint.json  typings.json
dockerfiles/: README.md  build-all.sh  build-che.sh  build.include  build.sh  pom.xml
docs/: .jekyll-metadata  NOTICE  README.md  _config.yml  docs.sh  github-io.md  pom.xml
e2e/: README.md  TestConstants.ts  generateIndex.sh  index.ts  inversify.config.ts  inversify.types.ts  mocha-che-operatorhub.opts  mocha-happy-path.opts  mocha-java-vertx.opts  mocha-wkspc-creation-and-ls.opts  mocha.opts  package-lock.json  package.json  pom.xml  publish.sh  tsconfig.json
examples/: pom.xml
exec-agent/: .gitignore  README.md  dev.md  main.go  pom.xml
ide/: README.md  pom.xml
infrastructures/: pom.xml
master/: pom.xml
multiuser/: pom.xml
plugin-sdk/: pom.xml
plugin-tools/: pom.xml
plugins/: .gitignore  README.md  pom.xml
recipes/: pom.xml
samples/: pom.xml
sdk/: README.md  che.bat  pom.xml
sdk-qa/: pom.xml
selenium/: pom.xml
typescript-dto/: .gitignore  Dockerfile  README.md  build.sh  dto-pom.xml  package.json  pom.xml  publish.sh
typescript-selenium/: README.md  TestConstants.ts  driverHelperUnitTests.spec.ts  inversify.config.ts  inversify.types.ts  mocha.opts  package-lock.json  package.json  spec.ts  tsconfig.json  types.ts
wokspace-loader/: package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
workspace-loader/: .dockerignore  Dockerfile  assembly.xml  devfile.yaml  karma.conf.js  package-lock.json  package.json  pom.xml  tsconfig.json  tsfmt.json  tslint.json  webpack.common.js  webpack.dev.js  webpack.prod.js
wsagent/: pom.xml
wsmaster/: pom.xml
(+27543 files in other folders)
